# TicTacToeServerForAndroid

./: CMakeCache.txt  CMakeLists.txt  ClientInfo.cpp  ClientInfo.h  Command.cpp  Command.h  Makefile  README.md  Room.cpp  Room.h  Server.cpp  Server.h  cmake_install.cmake  main.cpp  tTT_server  发送与接收流程图.drawio  服务端与客户端流程图.drawio
